Added Prague community to Europe communities
New community founded in Prague

--- a/community/index.html
+++ b/community/index.html
@@ -157,6 +157,7 @@ title:  Julia Community
           <li><a href="https://www.meetup.com/JuliaStanbul/">JuliaStanbul (Istanbul)</a>
           <li><a href="https://www.meetup.com/London-Julia-User-Group/">London Julia User Group</a>
           <li><a href="https://www.meetup.com/BeNeLux-Julia-User-Group/">BeNeLux Julia User Group</a>
+	  <li><a href="https://www.meetup.com/Prague-Julia-programming-group/">Prague Julia Programming Group</a>	  
           <li><a href="https://www.meetup.com/Vienna-Julia-Meetup/">Vienna Julia Meetup</a>
           <li><a href="https://www.meetup.com/Warszawskie-Forum-Julia/">Warszawskie Forum Julia</a>
           <li><a href="https://www.meetup.com/Zurich-Julia-User-Group/">Zurich Julia Users Group</a>
